<resources>
    <string name="app_name">SmartAttendance</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="button">Button</string>
    <string name="password">Password</string>
    <string name="username1">Username</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="register_here">Register here</string>
    <string name="attempts">Attempts:</string>
    <string name="smartattendance">SmartAttendance</string>
    <string name="say_hello_to">Say Hello To</string>
    <string name="about">About</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="view_records">View Records</string>
    <string name="add_records">Add Records</string>
    <string name="modify">Modify</string>
    <string name="result">Result</string>
    <string name="workspace">Workspace</string>
    <string name="username_register">username_register</string>
    <string name="username_register1">Username_register1</string>
    <string name="password_register">Password_register</string>
    <string name="register_button_new">REGISTER</string>
    <string name="kaushal_dhakal">Kaushal Dhakal</string>
    <string name="milan_thapa">Milan Thapa</string>
    <string name="manish_bhusal">Manish Bhusal</string>
    <string name="bipesh_subedi">Bipesh Subedi</string>
    <string name="developers">Developers:</string>
    <string name="enter_details">Enter Details:</string>
    <string name="year">Year :</string>
    <string name="save">Save</string>
    <string name="enter_year">Enter Year</string>
    <string name="enter_semester">Enter semester</string>
    <string name="enter_department_name">Enter Department name</string>
    <string name="department">Department :</string>
    <string name="semester">Semester :</string>
    <string name="add_students">Add Students</string>
    <string name="add_entry">Add Entry</string>
    <string name="adding_panel">Adding panel:</string>
    <string name="adding_panel_text">Adding Panel :</string>
    <string name="name_students">Name :</string>
    <string name="students_entry_location">Entry Location :</string>
    <string name="add_students_view_text">Add Students :</string>
    <string name="confirm_password_register">Confirm Password</string>
    <string name="get_started">GET STARTED</string>
    <string name="save_text_entry">SAVE</string>
    <string name="roll_id_no">Roll/ID no :</string>
    <string name="save_students">SAVE</string>
    <string name="register_text">REGISTER</string>

    <string name="hello_world">Hello world!</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="add">Add</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="website">Website</string>
    <string name="company_name">Company name</string>
    <string name="add_new_company">Add New Departmnet</string>
    <string name="no_company_in_the_database_create_new_one_by_clicking_the_add_button_at_the_top_right">No Department in the database. create new one by clicking the add button at the top right</string>
    <string name="empty_fields_message">One or more fields are empty</string>
    <string name="salary">Salary</string>
    <string name="all_employees">All Employees</string>
    <string name="no_employee_working_for_this_company_add_a_new_one_by_clicking_the_add_button_on_the_top_right">No employee working for this company. Add a new one by clicking the add button on the top right</string>
    <string name="add_new_employee">Add New Employee</string>
    <string name="select_a_company">Select a Department</string>
    <string name="delete">Delete</string>
    <string name="company_deleted_successfully">Departmnet deleted successfully</string>
    <string name="employee_deleted_successfully">Employee deleted successfully</string>
    <string name="view">view</string>
</resources>
