<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/attempt_counter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context="com.example.joker.smartattendance.GetStarted">
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="200dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/login_foreground" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_user"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_alignLeft="@+id/editText_username"
        android:layout_alignStart="@+id/editText_username"
        android:layout_below="@+id/editText_username"
        android:layout_marginTop="18dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_password"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light" />

    <Button
        android:id="@+id/button_login"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_password"
        android:layout_alignStart="@+id/editText_password"
        android:layout_below="@+id/editText_password"
        android:layout_marginLeft="16dp"
        android:background="@drawable/login"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/button_signup"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:background="@drawable/login"
        android:layout_marginTop="17dp"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="58dp"
        android:text="@string/register_here"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_login"
        android:layout_alignStart="@+id/button_login"
        android:layout_below="@+id/button_login"
        android:layout_marginTop="11dp"
        android:text="@string/attempts"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/attempt_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light" />

   </RelativeLayout>
 </ScrollView>
