<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context="com.example.joker.smartattendance.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="89dp"
            android:layout_marginStart="84dp"
            android:text="@string/smartattendance"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginRight="89dp"
            android:layout_marginLeft="84dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginEnd="118dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="240dp"
            android:text="@string/say_hello_to"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="118dp"
            android:layout_marginLeft="110dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="155dp"
            android:layout_marginStart="151dp"
            android:layout_marginTop="84dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/login_foreground"
            android:layout_marginRight="155dp"
            android:layout_marginLeft="151dp" />

        <Button
            android:id="@+id/button_about"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="267dp"
            android:layout_marginTop="90dp"
            android:text="@string/about"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_getstarted"
            android:layout_marginLeft="267dp" />

        <android.support.v7.widget.CardView
            android:id="@+id/button_getstarted"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="55dp"
            android:clickable="true"
            android:textAlignment="center"
            app:cardBackgroundColor="?attr/colorButtonNormal"
            app:cardCornerRadius="25dp"
            android:background="@drawable/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:focusable="true"
            android:layout_marginLeft="55dp">

            <TextView
                android:id="@+id/textView_get_started"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent"
                android:text="@string/get_started"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                tools:textColor="@android:color/background_dark" />
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</ScrollView>